<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/vista_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/vistalugar_nombres_del_lugar"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawableStart="@android:drawable/btn_star"
            android:text="@string/vistalugar_tipo_de_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:text="@string/vistalugar_direccion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawableStart="@android:drawable/ic_menu_call"
            android:text="@string/vistalugar_telefono_edicion_lugares"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawableStart="@android:drawable/ic_menu_mapmode"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawableStart="@android:drawable/ic_menu_info_details"
            android:text="@string/vistalugar_comentario"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:text="@string/vistalugar_fecha"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawableStart="@android:drawable/ic_menu_recent_history"
            android:text="@string/vistalugar_hora"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <RatingBar
            android:id="@+id/valoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:rating="3" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/vistalugar_fotografia"
                android:src="@drawable/foto_epsg" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <ImageView
                    android:id="@+id/camara"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icono_camara"
                    android:src="@android:drawable/ic_menu_camera" />

                <ImageView
                    android:id="@+id/galeria"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icono_galeria"
                    android:src="@android:drawable/ic_menu_gallery" />

                <ImageView
                    android:id="@+id/cerrar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/icono_cerrar"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>
