<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentacion.MainActivity"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vistalugar_nombres_del_lugar"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="58dp"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/vistalugar_tipo_de_lugar"
            app:layout_constraintStart_toStartOf="@+id/editTextNombre"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextDireccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/vistalugar_direccion"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/vistalugar_telefono_edicion_lugares"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/editTextDireccion"
            app:layout_constraintStart_toStartOf="@+id/editTextDireccion"
            app:layout_constraintTop_toBottomOf="@+id/editTextDireccion" />

        <EditText
            android:id="@+id/editTextDireccionWeb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/url"
            android:importantForAutofill="no"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="@+id/editTextTelefono"
            app:layout_constraintStart_toStartOf="@+id/editTextTelefono"
            app:layout_constraintTop_toBottomOf="@+id/editTextTelefono" />

        <EditText
            android:id="@+id/editTextComentario"
            android:layout_width="0dp"
            android:layout_height="222dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/comentario"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/editTextDireccionWeb"
            app:layout_constraintStart_toStartOf="@+id/editTextDireccionWeb"
            app:layout_constraintTop_toBottomOf="@+id/editTextDireccionWeb" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
